--- a/pt-web/src/components/Footer/Footer.module.scss
+++ b/pt-web/src/components/Footer/Footer.module.scss
@@ -13,7 +13,8 @@
   margin-inline: auto;
   padding-inline: clamp(16px, 3vw, 24px);
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
   gap: clamp(20px, 3vw, 40px);
 }
 
