--- a/br-general-python/app/templates/auth/ws-test.html
+++ b/br-general-python/app/templates/auth/ws-test.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
 <body>
+
 <script>
     const token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJjbWp2aXNkdTcwMDAwamF5NjJ4aDg0eXBjIiwiZXhwIjoxNzY3Mjg3Mjg4LCJpYXQiOjE3NjcyODAwODgsImp0aSI6IjhiMjRkNGEyLTE3MzMtNDc4ZC1iNTk3LWNhY2E3ODhiZTk0MyIsInR5cGUiOiJhY2Nlc3MifQ.HS1VQ7hLA7PrUekNihagQjRJ4kCgRb8mhJMdGbTwiBk";
-    const ws = new WebSocket("ws://localhost:8000/br-general/ws?token=" + token);
+    const ws = new WebSocket("ws://localhost:8000/br-general/ws/ws?token=" + token);
 
-    ws.onopen = () => console.log("connected");
+    ws.onopen = () => {
+        console.log("connected");
+        ws.send(JSON.stringify({ping: true}));
+    };
+
     ws.onmessage = (e) => console.log("message:", e.data);
     ws.onclose = (e) => console.log("closed", e.code);
 </script>
+
 </body>
 </html>
