style: #24 update button styles

--- a/pt-web/src/pages/authPage/AuthPage.module.scss
+++ b/pt-web/src/pages/authPage/AuthPage.module.scss
@@ -104,6 +104,7 @@
   border: 1px solid vars.$color-border;
   border-radius: vars.$radius-md;
   font-size: vars.$font-md;
+  background: vars.$bg-light-gray;
   outline: none;
   transition: border-color vars.$transition-fast;
 
