feat: #16 added style to conversationList component

--- a/pt-web/src/components/Navbar/Navbar.module.scss
+++ b/pt-web/src/components/Navbar/Navbar.module.scss
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border-right: 1px solid vars.$color-border;
+  font-family: vars.$font-main;
 }
 
 .navList {
