--- a/pt-web/src/styles/_variables.scss
+++ b/pt-web/src/styles/_variables.scss
@@ -1,10 +1,12 @@
 $color-primary: #435ecc;
 $color-primary-hover: #071f53;
 $color-cta-bg: #71caed;
+$color-title: #808080;
 $color-text: #4a4a4a;
 $color-text-secondary: #6b7280;
+$color-placeholder: #c9c9c9;
 $color-bg: #fff;
-$color-bg-alt: #f7fbff;
+$color-bg-alt: #ddedfd;
 $color-bg-hover: #eaebef;
 $color-muted: #9ca3af;
 $color-border: #e5e7eb;
