--- a/pt-web/src/components/Chat/Chat.module.scss
+++ b/pt-web/src/components/Chat/Chat.module.scss
@@ -1,10 +1,5 @@
-.conversationList {
+.chat {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   font-size: large;
-}
-
-.wrapper {
-  border: 1px solid black;
-  height: 500px;
 }
