--- a/pt-web/src/components/Chat/ConversationList/ConversationList.module.scss
+++ b/pt-web/src/components/Chat/ConversationList/ConversationList.module.scss
@@ -2,12 +2,13 @@
 
 .conversationList {
   font-family: vars.$font-main;
+  border-right: 1px solid vars.$color-border;
 }
 
 .searchWrapper {
   padding: vars.$pad-sm vars.$pad-md;
-  border-right: 1px solid vars.$color-border;
   border-bottom: 1px solid vars.$color-border;
+  height: vars.$chat-header-height;
 }
 
 .search {
@@ -16,6 +17,7 @@
   outline: none;
   color: vars.$color-text;
   font-size: vars.$font-lg;
+  padding-block: 0;
 }
 
 .search::placeholder {
