Styled chat page (#39)
* feat: #16 Added access token injection to the connection method in the WebSocket client.

* refactor: #16 changes for working demo, modified conversation, contacts schemas to camelcase, increased ws reconnect time

* refactor: #16 update websocket integration and improve message handling across components

* refactor: #16 enabled StrictMode

* refactor: #16 rename service files

* refactor: #16 modified  for incapsulation

* refactor: #16 added MessageDirection enum

* refactor: #16 remove "v" field from WsEventType

* refactor: #16 reset change in migration

* feat: #16 added and styled navbar

* feat: #16 modified navbar styles

* feat: #16 added Chat page with linked route, dict

* feat: #16 added style to conversationList component

* feat: #16 added select conversation logic

* feat: #16 added style to messageList component

* feat: #16 added own logic in MessageList component

* feat: #16 added styles to companionProfile component

* refactor: #16 modified style for CompanionProfile component

* refactor: #16 added check prod env in message service, remove default conversationId value in send handler

* refactor: #16 modified conversationCard style

* refactor: #16 modified conversationCard style

--- a/pt-web/src/styles/_variables.scss
+++ b/pt-web/src/styles/_variables.scss
@@ -1,17 +1,20 @@
 $color-primary: #435ecc;
 $color-primary-hover: #071f53;
 $color-cta-bg: #71caed;
+$color-title: #808080;
 $color-text: #4a4a4a;
 $color-text-secondary: #6b7280;
+$color-placeholder: #c9c9c9;
 $color-bg: #fff;
-$color-bg-alt: #f7fbff;
+$color-bg-alt: #ddedfd;
+$color-bg-hover: #eaebef;
 $color-muted: #9ca3af;
 $color-border: #e5e7eb;
 $color-success: #22c55e;
 $color-warning: #facc15;
 $color-error: #ef4444;
 $bg-light-gray: #fafafa;
-$header-height: 90px;
+$header-height: 70px;
 $footer-height: 300px;
 $container-gap: 20px;
 $container-max: 1220px;
@@ -80,3 +83,4 @@ $subtitle-size: clamp(15px, 1.8vw, 18px);
 $section-title-size: clamp(20px, 2.6vw, 28px);
 $card-title-size: clamp(18px, 2.2vw, 22px);
 $test-detail-max: 840px;
+$chat-header-height: 56px;
