--- a/pt-web/src/styles/_globals.scss
+++ b/pt-web/src/styles/_globals.scss
@@ -5,13 +5,19 @@
 }
 
 .page {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+
+  // flex-direction: column;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
+
+  // overflow-y: auto;
 }
 
 .main {
-  flex: 1;
+  // flex: 1;
+  display: grid;
+  grid-template-columns: auto 1fr;
 }
 
 a {
