--- a/pt-web/src/components/Chat/SuggestionList/SuggestionList.module.scss
+++ b/pt-web/src/components/Chat/SuggestionList/SuggestionList.module.scss
@@ -12,8 +12,32 @@
 .header {
   padding: vars.$pad-sm vars.$pad-md;
   border-bottom: 1px solid vars.$color-border;
-  font-size: vars.$font-lg;
   height: vars.$chat-header-height;
+  display: flex;
+  justify-content: space-between;
+  gap: vars.$gap-md;
+  align-items: center;
+}
+
+.title {
+  font-size: vars.$font-lg;
+}
+
+.refreshButton {
+  width: vars.$icon-md;
+  height: vars.$icon-md;
+  border-radius: 50%;
+  border: none;
+  background-color: #fff;
+}
+
+.refreshButton:hover {
+  background-color: vars.$color-bg-hover;
+}
+
+.refreshIcon {
+  width: 100%;
+  height: 100%;
 }
 
 .content {
