refactor: #4 modified styles, added scrollToBottom in messageList component

--- a/pt-web/src/components/Chat/MessageList/MessageCard/MessageCard.module.scss
+++ b/pt-web/src/components/Chat/MessageList/MessageCard/MessageCard.module.scss
@@ -47,6 +47,7 @@
   background-color: vars.$color-primary;
   border-radius: vars.$radius-md;
   border-top-left-radius: 0;
+  overflow-wrap: anywhere;
 }
 
 .messageText.own {
