--- a/pt-web/src/components/Chat/MessageList/MessageList.module.scss
+++ b/pt-web/src/components/Chat/MessageList/MessageList.module.scss
@@ -20,14 +20,21 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
+}
 
-  // height: 100%;
+.relativeWrapper {
+  position: relative;
+  height: 100%;
 }
 
 .messageElementsWrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
   width: 100%;
   overflow: auto;
-  height: 400px;
+
+  // height: 400px;
   display: flex;
   flex-direction: column-reverse;
   padding-bottom: 2rem;
