--- a/pt-web/src/components/Chat/CompanionProfile/CompanionProfile.module.scss
+++ b/pt-web/src/components/Chat/CompanionProfile/CompanionProfile.module.scss
@@ -22,7 +22,7 @@
   display: grid;
 
   // grid-template-rows: repeat(3, 1fr);
-  grid-template-rows: 1fr auto auto;
+  grid-template-rows: 1fr auto 1fr;
 }
 
 .profile {
@@ -88,7 +88,8 @@
 
 .textarea {
   width: 100%;
-  height: 7rem;
+  height: 100%;
   border: 1px solid vars.$color-border;
   outline: none;
+  resize: none;
 }
