--- a/pt-web/src/components/Chat/MessageList/MessageList.module.scss
+++ b/pt-web/src/components/Chat/MessageList/MessageList.module.scss
@@ -20,14 +20,21 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
+}
 
-  // height: 100%;
+.relativeWrapper {
+  position: relative;
+  height: 100%;
 }
 
 .messageElementsWrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
   width: 100%;
   overflow: auto;
-  height: 400px;
+
+  // height: 400px;
   display: flex;
   flex-direction: column-reverse;
   padding-bottom: 2rem;
@@ -36,19 +43,23 @@
 .messageInputWrapper {
   padding: vars.$pad-sm;
   border-top: 1px solid vars.$color-border;
-  height: vars.$chat-header-height;
+  height: 128px;
   display: flex;
   justify-content: space-between;
+  gap: vars.$gap-md;
+  align-items: end;
 }
 
 .messageInput {
-  width: 100%;
+  flex: 1;
   border: none;
-  height: vars.$font-lg;
+  height: 100%;
   outline: none;
   color: vars.$color-text;
   font-size: vars.$font-lg;
   padding-block: 0;
+  overflow-y: auto;
+  resize: none;
 }
 
 .messageInput::placeholder {
@@ -59,6 +70,7 @@
 .messageSendButton {
   @include mixins.flex-center;
 
+  height: min-content;
   border-radius: vars.$radius-sm;
   padding: 10px;
   text-align: center;
