--- a/pt-web/src/pages/authPage/AuthPage.module.scss
+++ b/pt-web/src/pages/authPage/AuthPage.module.scss
@@ -1,7 +1,7 @@
 @use "src/styles/variables" as vars;
 
 .wrap {
-  min-height: 60vh;
+  height: 100vh;
   display: grid;
   place-items: center;
   padding: vars.$pad-lg;
