--- a/pt-web/src/apiAutogenerated/templates/typescript-fetch/apis.mustache
+++ b/pt-web/src/apiAutogenerated/templates/typescript-fetch/apis.mustache
@@ -133,9 +133,6 @@ export class {{classname}} {
           {{/isContainer}}
           {{/bodyParam}}
           {{/hasBodyParam}}
-          {{#hasFormParams}}
-          formParams,
-          {{/hasFormParams}}
           initOverrides);
 
     }
@@ -180,3 +177,5 @@ export type {{operationIdCamelCase}}{{enumName}} = typeof {{operationIdCamelCase
 {{/operation}}
 {{/operations}}
 {{/hasEnums}}
+
+export const {{classVarName}}Api = new {{classname}}();
